--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
   <body>
     <div id="app"></div>
   </body>
-  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="https://cdn.polyfill.io/v1/polyfill.min.js?features=default,es6,Promise,fetch&amp;flags=gated"></script>
   <script src="./main.js"></script>
 </html>
