--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Mammoth Bats</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./main.css">
   </head>
   <body>
