--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,13 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./main.css">
+    <!-- inject:css -->
+    <!-- endinject -->
   </head>
   <body>
     <div id="app"></div>
   </body>
   <script src="https://cdn.polyfill.io/v1/polyfill.min.js?features=default,es6,Promise,fetch&amp;flags=gated"></script>
-  <script src="./main.js"></script>
+  <!-- inject:js -->
+  <!-- endinject -->
 </html>
