Webpack production config and working tasks

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,5 @@
     <div id="app"></div>
   </body>
   <script src="https://cdn.polyfill.io/v1/polyfill.min.js?features=default,es6,Promise,fetch&amp;flags=gated"></script>
-  <!-- inject:js -->
-  <!-- endinject -->
+  <script src="./main.js"></script>
 </html>
